--- a/code/login.html
+++ b/code/login.html
@@ -1,1 +1,89 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>大事件-登录/注册</title>
+    <!-- 导入layUI样式 -->
+    <link rel="stylesheet" href="/assets/lib/layui/css/layui.css" />
+    <!-- 导入自己的样式 -->
+    <link rel="stylesheet" href="/assets/css/login.css" />
+</head>
+
+<body>
+    <!-- 头部的logo区域 -->
+    <div class="layui-main">
+        <img src="/assets/images/logo.png" alt="" />
+    </div>
+    <!-- 登录注册区域 -->
+    <div class="LoginAndRegBox">
+        <div class="title_box">
+        </div>
+        <!-- 登录区域 -->
+        <div class="login_box">
+            <!-- 登录表单 -->
+            <form class="layui-form layui_box" id="form_login">
+                <!-- 用户名 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-username"></i>
+                    <input type="text" name="uesrname" required lay-verify="required" placeholder="请输入用户名"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <!-- 密码 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="password" required lay-verify="required|pass" placeholder="请输入密码"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <!-- 登录按钮 -->
+                <div class="layui-form-item ">
+                    <!-- 提交按钮多一个lay-submit属性 -->
+                    <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit>登录</button>
+                </div>
+                <div class="layui-form-item link"><a href="javascript:;" id="link_reg">去注册账号</a></div>
+            </form>
+
+        </div>
+        <!-- 注册区域 -->
+        <div class="reg_box">
+            <form class="layui-form layui_box" id="form_reg">
+                <!-- 用户名 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-username"></i>
+                    <input type="text" name="uesrname" required lay-verify="required" placeholder="请输入用户名"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <!-- 密码 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="password" required lay-verify="required|pass" placeholder="请输入密码"
+                        autocomplete="off" class="layui-input" id="reg_password">
+                </div>
+                <!-- 再次确认密码 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="repassword" required lay-verify="required|pass|repwd"
+                        placeholder="再次确认密码" autocomplete="off" class="layui-input">
+                </div>
+                <!-- 登录按钮 -->
+                <div class="layui-form-item">
+                    <!-- 提交按钮多一个lay-submit属性 -->
+                    <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit>注册</button>
+                </div>
+                <div class="layui-form-item link"><a href="javascript:;" id="link_login">去登录</a></div>
+            </form>
+
+        </div>
+    </div>
+    <!-- 导入layUI的js文件 -->
+    <script src="/assets/lib/layui/layui.all.js"></script>
+    <!-- 引入JQ的js样式 -->
+    <script src="/assets/lib/jquery.js"></script>
+    <!-- 导入自己封装的API文件 -->
+    <script src="/assets/js/baseApi.js"></script>
+    <!-- 引入自己的js样式 -->
+    <script src="/assets/js/login.js"></script>
+</body>
+
+</html>
